@@ -1,4 +1,4 @@
-Copyright (c) 1987-2021 Udo Munk
+Copyright (c) 1987-2024 Udo Munk
 
 Permission is hereby granted, free of charge, to any person
 obtaining a copy of this software and associated documentation
