@@ -64,3 +64,4 @@ For some improvements to the simulator.
 For much work on the assembler: macros, new expression parser, 8080 mode,
 and various other improvements and bug fixes.
 For refactoring the ICE so that it can be better attached to systems.
+For code analysis and improving overall code quality and readability
