@@ -1,5 +1,5 @@
-Copyright (c) 1987-2021 Udo Munk
-Copyright (c) 2022 Thomas Eberhardt
+Copyright (c) 1987-2024 Udo Munk
+Copyright (c) 2022-2024 Thomas Eberhardt
 
 Permission is hereby granted, free of charge, to any person
 obtaining a copy of this software and associated documentation
