@@ -37,3 +37,4 @@
 03-AUG-17 Release 1.35 added UNIX sockets, bugfixes, improvements
 21-DEC-17 Release 1.36 bugfixes and improvements
 06-JAN-21 Release 1.37 bugfixes and improvements
+  -APR-24 Release 1.38 many many bugfixes and improvements
